--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,8 +98,10 @@ jobs:
           name: build
           path: build
       
-      - name: Install Chrome 🌐
-        run: sh ./.scripts/setup-chromedriver.sh "linux64"
+      - uses: nanasess/setup-chromedriver@v1
+
+     # - name: Install Chrome 🌐
+     #   run: sh ./.scripts/setup-chromedriver.sh "linux64"
 
       - name: Install Serve Package 🍲
         run: sudo npm install -g serve
