--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
           name: build
           path: build
       
-      - uses: nanasess/setup-chromedriver@master
+     # - uses: nanasess/setup-chromedriver@master
 
      # - name: Install Chrome 🌐
      #   run: sh ./.scripts/setup-chromedriver.sh "linux64"
@@ -109,6 +109,7 @@ jobs:
       - name: "Chrome 🕹️"
         uses: cypress-io/github-action@v2
         with:
+          build: npx cypress info
           start: serve build -l 5000
           wait-on: "http://localhost:5000"
           config: "baseUrl=http://localhost:5000"
