--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "homepage": "https://playtictactoe.xyz/",
   "private": true,
   "dependencies": {
-    "classnames": "^2.2.6",
-    "date-fns": "^2.16.0",
-    "immer": "^7.0.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.22.1",
+    "immer": "^9.0.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^4.2.0",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.1",
-    "redux": "^4.0.5",
+    "react-scroll": "^1.8.2",
+    "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "rmwc": "^6.1.3",
-    "typescript": "^4.0.2"
+    "rmwc": "^6.1.4",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -46,31 +46,30 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@storybook/addon-essentials": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.21",
-    "@types/classnames": "^2.2.10",
-    "@types/enzyme": "^3.10.5",
+    "@babel/core": "^7.14.5",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.9",
+    "@types/classnames": "^2.3.1",
+    "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.6.1",
-    "@types/react": "^16.9.48",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router": "^5.0.0",
-    "@types/react-router-dom": "^4.3.2",
-    "@types/react-scroll": "^1.8.0",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.2",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.13",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.15",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-scroll": "^1.8.2",
     "@types/redux-logger": "^3.0.8",
-    "babel-loader": "^8.1.0",
     "enzyme": "^3.11",
-    "enzyme-adapter-react-16": "^1.15.3",
-    "enzyme-to-json": "^3.5.0",
-    "prettier": "^2.1.1",
-    "redux-devtools-extension": "^2.13.8",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "prettier": "^2.3.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "redux-saga-test-plan": "^4.0.0-rc.3",
+    "redux-saga-test-plan": "^4.0.1",
     "source-map-explorer": "^2.5.2"
   },
   "browserslist": {
@@ -85,5 +84,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
