--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/addon-links": "^6.3.0",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.3.0",
+    "@storybook/testing-react": "^0.0.18",
     "@testing-library/cypress": "^7.0.6",
     "@testing-library/dom": "^7.31.2",
     "@testing-library/jest-dom": "^5.14.1",
