--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,9 +98,9 @@ jobs:
           name: build
           path: build
       
-      - name: Install Chrome 🌐
+    #  - name: Install Chrome 🌐
         # We want an up to date Chrome
-        run: sudo ./.scripts/setup-chromedriver.sh "linux64"
+     #   run: sudo ./.scripts/setup-chromedriver.sh "linux64"
 
       #- name: Install Server 📡
       #  run: sudo npm install -g serve
@@ -112,7 +112,7 @@ jobs:
           start: npx http-server build -p 3000 #yarn start # serve build -l 3000
           wait-on: "http://localhost:3000"
           # Use Custom Script for E2E testing so that videos are not trashed
-          command: yarn test:int --e2e -v --browser chrome
+          command: yarn test:int --e2e -v #--browser chrome
           
       - name: Increase File Watchers 🔭
         # We don't want a lot of "ENOSPC: System limit for number of file watchers reached" warnings
@@ -126,7 +126,7 @@ jobs:
           record: true
           # Use custom script for "cypress run-ct" so that browser is respected
           # Also make sure that previous videos are not trashed!
-          command: yarn test:int --ct -v --browser chrome
+          command: yarn test:int --ct -v #--browser chrome
 
       - name: Upload Screenshots 📸
         uses: actions/upload-artifact@v1
