--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,7 +109,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           build: yarn cypress info
-          start: npx http-server build -p 3000 #yarn start # serve build -l 3000
+          start: npx local-web-server -p 3000 --spa index.html -d build #npx http-server build -p 3000 #yarn start # serve build -l 3000
           wait-on: "http://localhost:3000"
           # Use Custom Script for E2E testing so that videos are not trashed
           command: yarn test:int --e2e -v #--browser chrome
