--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,18 +98,11 @@ jobs:
           name: build
           path: build
       
-    #  - name: Install Chrome 🌐
-        # We want an up to date Chrome
-     #   run: sudo ./.scripts/setup-chromedriver.sh "linux64"
-
-      #- name: Install Server 📡
-      #  run: sudo npm install -g serve
-
       - name: "Chrome 🕹️"
         uses: cypress-io/github-action@v2
         with:
           build: yarn cypress info
-          start: npx local-web-server -p 3000 --spa index.html -d build #npx http-server build -p 3000 #yarn start # serve build -l 3000
+          start: npx local-web-server -p 3000 --spa index.html -d build
           wait-on: "http://localhost:3000"
           # Use Custom Script for E2E testing so that videos are not trashed
           command: yarn test:int --e2e -v #--browser chrome
