--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
     "immer": "^9.0.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "react-scroll": "^1.8.2",
+    "react-use": "^17.2.4",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
@@ -43,16 +44,16 @@
     "@storybook/react": "^6.3.0",
     "@storybook/testing-react": "^0.0.18",
     "@testing-library/cypress": "^7.0.6",
-    "@testing-library/dom": "^7.31.2",
+    "@testing-library/dom": "^8.0.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.1.9",
     "@types/classnames": "^2.3.1",
     "@types/cypress-image-snapshot": "^3.1.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.13",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.16",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
@@ -60,7 +61,7 @@
     "@types/redux-logger": "^3.0.8",
     "cypress": "^7.6.0",
     "cypress-image-snapshot": "^4.0.1",
-    "msw": "^0.29.0",
+    "msw": "^0.30.0",
     "prettier": "^2.3.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
