execute migration script

--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.22.1",
+    "error": "10.4.0",
     "immer": "^9.0.3",
+    "next": "11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
     "react-scroll": "^1.8.2",
     "react-use": "^17.2.4",
     "redux": "^4.1.0",
@@ -25,9 +26,10 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "next dev",
+    "start-production": "next start",
+    "build": "next build",
+    "test": "jest test --env=jsdom",
     "test:int": "sh ./.scripts/test-cypress.sh",
     "cy:open": "cypress open",
     "cy:openct": "cypress open-ct",
