--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,26 @@ typings/
 
 # Remove Build Folder
 build/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+# testing
+/coverage
+# next.js
+/.next/
+# production
+/build
+# misc
+.DS_Store
+*.pem
+# debug
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+# vercel
+.vercel
