--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "types": ["cypress", "@testing-library/cypress", "@types/cypress-image-snapshot"],
+    "types": [
+      "cypress",
+      "@testing-library/cypress",
+      "@types/cypress-image-snapshot"
+    ],
     "target": "es5",
     "lib": [
       "dom",
@@ -24,5 +28,8 @@
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
