--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 SKIP_PREFLIGHT_CHECK=true
 
-REACT_APP_API_CREATE=http://localhost:7001/api/create
-REACT_APP_API_CONNECT=http://localhost:7001/api/connect
-REACT_APP_API_MOVE=http://localhost:7002/api/move
-REACT_APP_API_SAVE=TODO
+REACT_APP_CREATE_API=http://localhost:7001/api/create
+REACT_APP_CONNECT_API=http://localhost:7001/api/connect
+REACT_APP_MOVE_API=http://localhost:7002/api/move
+REACT_APP_SAVE_API=TODO
+REACT_APP_REALTIME_API=ws://localhost:8001/realtime/v1
+REACT_APP_REALTIME_TOKEN=INSERT_YOUR_KEY
+REACT_APP_REALTIME_FILTER=realtime:public:moves:fk_game_short_id=eq.
