--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://playtictactoe.xyz/",
   "private": true,
   "dependencies": {
+    "@supabase/realtime-js": "^1.1.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "immer": "^9.0.5",
