--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,7 @@ jobs:
           start: npx local-web-server -p 3000 --spa index.html -d build
           wait-on: "http://localhost:3000"
           # Use Custom Script for E2E testing so that videos are not trashed
-          command: yarn test:int --e2e -v #--browser chrome
+          command: yarn test:int --e2e -v
           
       - name: Increase File Watchers 🔭
         # We don't want a lot of "ENOSPC: System limit for number of file watchers reached" warnings
@@ -119,7 +119,7 @@ jobs:
           record: true
           # Use custom script for "cypress run-ct" so that browser is respected
           # Also make sure that previous videos are not trashed!
-          command: yarn test:int --ct -v #--browser chrome
+          command: yarn test:int --ct -v
 
       - name: Upload Screenshots 📸
         uses: actions/upload-artifact@v1
