--- a/package.json
+++ b/package.json
@@ -69,19 +69,11 @@
     "source-map-explorer": "^2.5.2",
     "webpack-dev-server": "^3.11.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all",
-      "not ie <= 11"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ],
   "msw": {
     "workerDirectory": "public"
   }
