--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,10 @@ jobs:
 
     - name: Install dependencies 🔌
       # `--prefer-offline` gives cache priority
-      run: yarn install --prefer-offline --frozen-lockfile
+      run: |
+        yarn install --prefer-offline --frozen-lockfile
+        pip install python-dotenv
+        pip install dotenv-linter
 
     - name: Run Tests 🧪
       run: yarn test
